bk_ida/gobmkida/c2/update_liberties
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/update_liberties/src/engine/board.c:3421:27: error: use of undeclared identifier 'dword_A7D19C'
if ( !byte_9B389F[v15] && dword_A7D19C[v15] != v14 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/update_liberties/src/engine/board.c:3421:7: error: use of undeclared identifier 'byte_9B389F'
if ( !byte_9B389F[v15] && dword_A7D19C[v15] != v14 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/update_liberties/src/engine/board.c:3429:1: error: use of undeclared identifier 'dword_A7D19C'
dword_A7D19C[v15] = v14; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/update_liberties/src/engine/board.c:3431:7: error: use of undeclared identifier 'byte_9B388C'
if ( !byte_9B388C[v15] && string_number[v15 + 384] != v14 ) 
      ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/update_liberties/src/obj/1/board.o] Error 1
